# doremi

./: README.md  apt.txt  empty-template.ipynb  environment.yml  pyproject.toml  setup.cfg  setup.py  try-things.ipynb
docs/: conf.py
src/bernstein/: __init__.py  abstract.py  parser.py  parsing.py
src/doremi/: __init__.py  abstract.py  concrete.py  fluidsynth.py  lilypond.py  parsing.py  synthesizer.py
studies/: alignment-parser.ipynb
tests/: test_abstract.py  test_concrete.py  test_package.py
