[metadata]
name = doremi
description = "Music composition language, inspired by Leonard Bernstein's notion of a musical grammar."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpivarski/doremi
author = Jim Pivarski
author_email = jpivarski@gmail.com
maintainer = Jim Pivarski
maintainer_email = jpivarski@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://doremi.readthedocs.io/
    Bug Tracker = https://github.com/jpivarski/doremi/issues
    Discussions = https://github.com/jpivarski/doremi/discussions
    Changelog = https://github.com/jpivarski/doremi/releases

[options]
packages = find:
install_requires =
    numpy>=1.13.3
    lark>=0.11.3
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx_copybutton
test =
    pytest>=6

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
